--- a/nsplit/html/css/main.css
+++ b/nsplit/html/css/main.css
@@ -1,20 +1,35 @@
 ﻿body {
     font-family: Arial;
     font-size: smaller;
-    margin:0;     /* This is used to reset any browser-default margins */
-    height:100vh; /* This is needed to overcome a Chrome bug. */
-    width:100vw;  /* As above. */
+    height: 100vh; /* This is needed to overcome a Chrome bug. */
+    margin: 0; /* This is used to reset any browser-default margins */
+    width: 100vw; /* As above. */
 }
 
 #typetree {
-    width: 25vw;
-    height:100vh;
     float: right;
+    height: 100vh;
     overflow-y: scroll;
+    width: 25vw;
 }
 
 #viewport {
-    width: 75vw;
-    height:100vh;
     float: left;
+    height: 100vh;
+    width: 75vw;
+}
+
+.node {
+    stroke: #fff;
+    stroke-width: 1.5px;
+}
+
+.link {
+    stroke: #999;
+    stroke-opacity: .6;
+}
+
+.rollout {
+    font: 10px sans-serif;
+    pointer-events: none;
 }
