--- a/nsplit/html/css/main.css
+++ b/nsplit/html/css/main.css
@@ -49,3 +49,26 @@
     font-size: smaller;
     pointer-events: none;
 }
+
+.tooltip {
+    color: blue;
+    background: ghostwhite;
+    width: auto;
+    height: auto;
+    position: absolute;
+    font-family: Arial;
+    pointer-events: none;
+    border: darkgrey solid thin;
+    padding: 5px;
+    padding-right: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.tooltiphead {
+    font-size: medium;
+}
+
+.tooltipbody {
+     font-size: small;
+}
