Implemented browser compatibility warning. Minor usability improvements.

--- a/nsplit/html/css/index.css
+++ b/nsplit/html/css/index.css
@@ -12,6 +12,12 @@ button {
     text-transform: uppercase;
 }
 
+#warning {
+    font-size: large;
+    color:darkred;
+    visibility: hidden;
+}
+
 #middle {
     display: block;
     margin-left: auto;
