--- a/nsplit/html/css/main.css
+++ b/nsplit/html/css/main.css
@@ -1,27 +1,16 @@
 ﻿body {
     font-family: Arial;
     font-size: smaller;
-    height: 100vh; /* This is needed to overcome a Chrome bug. */
-    margin: 0; /* This is used to reset any browser-default margins */
-    width: 100vw; /* As above. */
+    height: 100vh; 
+    width: 100vw;
+    margin: 0;
 }
 
 #right {
-    float: left;
+    float: right;
     height: 100vh;
     width: 30vw;
-    overflow: hidden; 
-}
-
-#toolbar {
-    float: left;    
-}
-
-#typetree {
-    float:left;
-    height: 100%;
-    overflow: scroll;
-    width: 100%;
+    overflow: auto; 
 }
 
 #viewport {
