Simplified generation code. Encapsulated tree.js

--- a/nsplit/html/css/index.css
+++ b/nsplit/html/css/index.css
@@ -12,6 +12,10 @@ button {
     text-transform: uppercase;
 }
 
+h2 {
+    text-align: center;
+}
+
 #warning {
     font-size: large;
     color:darkred;
